feat: add train controller
Signed-off-by: gfmota <gabrielfmota134@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/acadtracker
+spring.datasource.username=postgres
+spring.datasource.password=password
