feat: add authentication controller
Signed-off-by: gfmota <gabrielfmota134@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/acadtracker
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+# Token secret
+api.security.token.secret=${JWT-SECRET:my-secret}
+
+spring.main.allow-bean-definition-overriding=true
