--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/acadtracker
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url=${DB-URL:jdbc:postgresql://localhost:5432/acadtracker}
+spring.datasource.username=${DB-USER:postgres}
+spring.datasource.password=${DB-PASSWORD:password}
 
 # Token secret
 api.security.token.secret=${JWT-SECRET:my-secret}
