--- a/package.json
+++ b/package.json
@@ -1,66 +1,68 @@
 {
-    "name": "acad-tracker",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^29.5.5",
-        "@types/node": "^20.6.1",
-        "@types/react": "^18.2.21",
-        "@types/react-dom": "^18.2.7",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "sass": "^1.67.0",
-        "typescript": "^5.2.2",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "postinstall": "husky install",
-        "start": "react-scripts start",
-        "build": "react-scripts build && compress-cra",
-        "test": "jest",
-        "test:ci": "jest --coverage",
-        "lint": "eslint ./src/",
-        "format": "prettier --write ./src/",
-        "lint-staged": "lint-staged --config lint-staged.js",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "compress-create-react-app": "^1.4.2",
-        "eslint": "^8.49.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-prettier": "latest",
-        "husky": "^8.0.3",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "lint-staged": "^14.0.1",
-        "prettier": "^3.0.3",
-        "ts-jest": "^29.1.1"
-    },
-    "overrides": {
-        "react-scripts": {
-            "typescript": ">= 3.2.1"
-        }
+  "name": "acad-tracker",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@tanstack/react-query": "^5.17.8",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.6.1",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.67.0",
+    "typescript": "^5.2.2",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "postinstall": "husky install",
+    "start": "react-scripts start",
+    "build": "react-scripts build && compress-cra",
+    "test": "jest",
+    "test:ci": "jest --coverage",
+    "lint": "eslint ./src/",
+    "format": "prettier --write ./src/",
+    "lint-staged": "lint-staged --config lint-staged.js",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.17.7",
+    "compress-create-react-app": "^1.4.2",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "latest",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": ">= 3.2.1"
     }
+  }
 }
