--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "postinstall": "husky install",
+    "prepare": "cd .. && husky install frontend/.husky",
     "start": "react-scripts start",
     "build": "react-scripts build && compress-cra",
     "test": "jest",
